--- a/WebContent/view/style/style.css
+++ b/WebContent/view/style/style.css
@@ -96,7 +96,7 @@ ol li
   margin-right: auto;}
 
 #header
-{ background: #1d1d1d url(pattern.png) repeat;
+{ background: #000000 url(pattern.png) repeat;
   border-bottom: 2px solid #6fa6e7;
   height: 177px;}
   
