--- a/WebContent/view/style/style.css
+++ b/WebContent/view/style/style.css
@@ -1,361 +1,452 @@
-html
-{ height: 100%;}
-
-#posicao{
-    float:right;
-    display:block;
-    margin-right:4px;
-    clear:left;
+html {
+	height: 100%;
 }
 
-#posicao1{
-    float:right;
-    display:block;
-    margin-right:60px;
-    clear:left;
+#posicao {
+	float: right;
+	display: block;
+	margin-right: 4px;
+	clear: left;
 }
 
-#posicao2{
-    float:right;
-    display:block;
-    margin-right:60px;
-    clear:left;
+#posicao1 {
+	float: right;
+	display: block;
+	margin-right: 210px;
+	clear: left;
 }
 
-*
-{ margin: 0;
-  padding: 0;}
+#posicao2 {
+	float: right;
+	display: block;
+	margin-right: 210px;
+	clear: left;
+}
 
-body
-{ font: normal .80em 'trebuchet ms', arial, sans-serif;
-  background: #FFF;
-  color: #555;}
+* {
+	margin: 0;
+	padding: 0;
+}
 
-p
-{ padding: 0 0 20px 0;
-  line-height: 1.7em;}
+body {
+	font: normal .80em 'trebuchet ms', arial, sans-serif;
+	background: #FFF;
+	color: #555;
+}
 
-img
-{ border: 0;}
+p {
+	padding: 0 0 20px 0;
+	line-height: 1.7em;
+}
 
-h1, h2, h3, h4, h5, h6 
-{ color: #6fa6e7;
-  letter-spacing: 0em;
-  padding: 0 0 5px 0;}
+img {
+	border: 0;
+}
 
-h1, h2, h3
-{ font: normal 170% 'century gothic', arial;
-  margin: 0 0 15px 0;
-  padding: 15px 0 5px 0;}
+h1, h2, h3, h4, h5, h6 {
+	color: #6fa6e7;
+	letter-spacing: 0em;
+	padding: 0 0 5px 0;
+}
 
-h2
-{ font-size: 160%;
-  padding: 9px 0 5px 0;}
+h1, h2, h3 {
+	font: normal 170% 'century gothic', arial;
+	margin: 0 0 15px 0;
+	padding: 15px 0 5px 0;
+}
 
-h3
-{ font-size: 140%;
-  padding: 5px 0 0 0;}
+h2 {
+	font-size: 160%;
+	padding: 9px 0 5px 0;
+}
 
-h4, h6
-{ color: #009FBC;
-  padding: 0 0 5px 0;
-  font: normal 110% arial;
-  text-transform: uppercase;}
+h3 {
+	font-size: 140%;
+	padding: 5px 0 0 0;
+}
 
-h5, h6
-{ color: #888;
-  font: normal 95% arial;
-  letter-spacing: normal;
-  padding: 0 0 15px 0;}
+h4, h6 {
+	color: #009FBC;
+	padding: 0 0 5px 0;
+	font: normal 110% arial;
+	text-transform: uppercase;
+}
 
-a, a:hover
-{ outline: none;
-  text-decoration: underline;
-  color: #009FBC;}
+h5, h6 {
+	color: #888;
+	font: normal 95% arial;
+	letter-spacing: normal;
+	padding: 0 0 15px 0;
+}
 
-a:hover
-{ text-decoration: none;}
+a, a:hover {
+	outline: none;
+	text-decoration: underline;
+	color: #009FBC;
+}
 
-blockquote
-{ margin: 20px 0; 
-  padding: 10px 20px 0 20px;
-  border: 1px solid #E5E5DB;
-  background: #FFF;}
+a:hover {
+	text-decoration: none;
+}
 
-ul
-{ margin: 2px 0 22px 17px;}
+blockquote {
+	margin: 20px 0;
+	padding: 10px 20px 0 20px;
+	border: 1px solid #E5E5DB;
+	background: #FFF;
+}
 
-ul li
-{ list-style-type: circle;
-  margin: 0 0 6px 0; 
-  padding: 0 0 4px 5px;
-  line-height: 1.5em;}
+ul {
+	margin: 2px 0 22px 17px;
+}
 
-ol
-{ margin: 8px 0 22px 20px;}
+ul li {
+	list-style-type: circle;
+	margin: 0 0 6px 0;
+	padding: 0 0 4px 5px;
+	line-height: 1.5em;
+}
 
-ol li
-{ margin: 0 0 11px 0;}
+ol {
+	margin: 8px 0 22px 20px;
+}
 
-.left
-{ float: left;
-  width: auto;
-  margin-right: 10px;}
+ol li {
+	margin: 0 0 11px 0;
+}
 
-.right
-{ float: right; 
-  width: auto;
-  margin-left: 10px;}
+.left {
+	float: left;
+	width: auto;
+	margin-right: 10px;
+}
 
-.center
-{ display: block;
-  text-align: center;
-  margin: 20px auto;}
+.right {
+	float: right;
+	width: auto;
+	margin-left: 10px;
+}
 
-#main, #logo, #menubar, #site_content, #footer
-{ margin-left: auto; 
-  margin-right: auto;}
+.center {
+	display: block;
+	text-align: center;
+	margin: 20px auto;
+}
 
-#header
-{ background: #000000 url() repeat;
-  border-bottom: 2px solid #6fa6e7;
-  height: 177px;}
-  
-#banner
-{ background: transparent url(banner.jpg) no-repeat;
-  width: 870px;
-  height: 180px;
-  margin-bottom: 20px;
-  border: 5px solid #6fa6e7;}
+#main, #logo, #menubar, #site_content, #footer {
+	margin-left: auto;
+	margin-right: auto;
+}
 
-#logo
-{ width: 880px;
-  position: relative;
-  height: 140px;
-  background: transparent;}
+#header {
+	background: #3a4560 url() repeat;
+	border-bottom: 1px solid #0a0f1a;
+	height: 177px;
+}
 
-#logo #logo_text 
-{ position: absolute; 
-  top: 10px;
-  left: 0;}
+#banner {
+	background: transparent url(banner.jpg) no-repeat;
+	width: 870px;
+	height: 180px;
+	margin-bottom: 20px;
+	border: 5px solid #6fa6e7;
+}
 
-#logo h1, #logo h2
-{ font: normal 300% 'century gothic', arial, sans-serif;
-  border-bottom: 0;
-  text-transform: none;
-  margin: 0 0 0 9px;}
+#logo {
+	width: 1000px;
+	position: relative;
+	height: 130px;
+	background: transparent;
+}
 
-#logo_text h1, #logo_text h1 a, #logo_text h1 a:hover 
-{ padding: 22px 0 0 0;
-  color: #FFF;
-  letter-spacing: 0.1em;
-  text-decoration: none;}
+#logo #logo_text {
+	position: absolute;
+	top: 15px;
+	left: 0;
+}
 
-#logo_text h1 a .logo_colour
-{ color: #6fa6e7;}
+#logo h1, #logo h2 {
+	font: normal 300% 'century gothic', arial, sans-serif;
+	border-bottom: 0;
+	text-transform: none;
+	margin: 0 0 0 9px;
+}
 
-#logo_text a:hover .logo_colour
-{ color: #FFF;}
+#logo_text h1, #logo_text h1 a, #logo_text h1 a:hover {
+	padding: 22px 0 0 0;
+	color: #FFF;
+	letter-spacing: 0.0em;
+	text-decoration: none;
+}
 
-#logo_text h2
-{ font-size: 120%;
-  padding: 4px 0 0 0;
-  color: #FFF;}
+#logo_text h1 a .logo_colour {
+	color: #6fa6e7;
+}
 
-#menubar
-{ width: 880px;
-  height: 46px;} 
+#logo_text a:hover .logo_colour {
+	color: #FFF;
+}
 
-ul#menu
-{ float: right;
-  margin: 0;}
+#logo_text h2 {
+	font-size: 120%;
+	padding: 4px 0 0 0;
+	color: #FFF;
+}
 
-ul#menu li
-{ float: left;
-  padding: 0 0 0 9px;
-  list-style: none;
-  margin: 1px 2px 0 0;
-  background: transparent;}
+#menubar {
+	width: 880px;
+	height: 46px;
+}
 
-ul#menu li a
-{ font: normal 100% 'trebuchet ms', sans-serif;
-  display: block; 
-  float: left; 
-  height: 20px;
-  padding: 6px 35px 5px 28px;
-  text-align: center;
-  color: #FFF;
-  text-decoration: none;
-  background: transparent;} 
+ul#menu {
+	float: right;
+	margin: 0;
+}
 
-ul#menu li.selected a
-{ height: 20px;
-  padding: 6px 35px 5px 28px;}
+ul#menu li {
+	float: left;
+	padding: 0 0 0 9px;
+	list-style: none;
+	margin: 1px 2px 0 0;
+	background: transparent;
+}
 
-ul#menu li.selected
-{ margin: 1px 2px 0 0;
-  background: #6fa6e7;}
+ul#menu li a {
+	font: normal 100% 'trebuchet ms', sans-serif;
+	display: block;
+	float: left;
+	height: 20px;
+	padding: 6px 35px 5px 28px;
+	text-align: center;
+	color: #FFF;
+	text-decoration: none;
+	background: transparent;
+}
 
-ul#menu li.selected a, ul#menu li.selected a:hover
-{ background: #6fa6e7;
-  color: #FFF;}
+ul#menu li.selected a {
+	height: 20px;
+	padding: 6px 35px 5px 28px;
+}
 
-ul#menu li a:hover
-{ color: #FFF;
-  background: #6fa6e7;}
+ul#menu li.selected {
+	margin: 1px 2px 0 0;
+	background: #6fa6e7;
+}
 
-#site_content
-{ width: 880px;
-  overflow: hidden;
-  margin: 20px auto 0 auto;
-  padding: 0 0 10px 0;} 
+ul#menu li.selected a, ul#menu li.selected a:hover {
+	background: #6fa6e7;
+	color: #FFF;
+}
 
-#sidebar_container
-{ float: right;
-  width: 224px;}
+ul#menu li a:hover {
+	color: #FFF;
+	background: #6fa6e7;
+}
 
-.sidebar_top
-{ width: 222px;
-  height: 14px;
-  background: transparent url(side_top.png) no-repeat;}
+#site_content {
+	width: 880px;
+	overflow: hidden;
+	margin: 20px auto 0 auto;
+	padding: 0 0 10px 0;
+}
 
-.sidebar_base
-{ width: 222px;
-  height: 14px;
-  background: url(side_base.png) no-repeat;}
+#sidebar_container {
+	float: right;
+	width: 224px;
+}
 
-.sidebar
-{ float: right;
-  width: 222px;
-  padding: 0;
-  margin: 0 0 16px 0;}
+#sidebar_container1 {
+	float: right;
+	width: 424px;
+	background-color: #ffffff;
+	height: 408px;
+	
+	background: transparent
+}
 
-.sidebar_item
-{ background: url(side_back.png) repeat-y;
-  padding: 0 15px;
-  width: 192px;}
+.sidebar_top {
+	width: 222px;
+	height: 14px;
+	background: transparent url(side_top.png) no-repeat;
+}
 
-.sidebar li a.selected
-{ color: #444;} 
+.sidebar_base {
+	width: 222px;
+	height: 14px;
+	background: url(side_base.png) no-repeat;
+}
 
-.sidebar ul
-{ margin: 0;} 
+.sidebar {
+	float: right;
+	width: 222px;
+	padding: 0;
+	margin: 0 0 16px 0;
+}
 
-#content
-{ text-align: left;
-  width: 620px;
-  padding: 0 0 0 5px;
-  float: left;}
-  
-#content ul
-{ margin: 2px 0 22px 0px;}
+.sidebar_item {
+	background: url(side_back.png) repeat-y;
+	padding: 0 15px;
+	width: 192px;
+}
 
-#content ul li, .sidebar ul li
-{ list-style-type: none;
-  background: url(bullet.png) no-repeat;
-  margin: 0 0 0 0; 
-  padding: 0 0 4px 25px;
-  line-height: 1.5em;}
+.sidebar li a.selected {
+	color: #444;
+}
 
-#footer
-{ width: 100%;
-  font-family: 'trebuchet ms', sans-serif;
-  font-size: 100%;
-  height: 80px;
-  padding: 28px 0 5px 0;
-  text-align: center; 
-  background: transparent url(pattern.png) repeat;
-  border-top: 2px solid #6fa6e7;
-  color: #FFF;}
+.sidebar ul {
+	margin: 0;
+}
 
-#footer p
-{ line-height: 1.7em;
-  padding: 0 0 10px 0;}
+#content2 {
+	text-align: left;
+	width: 920px;
+	padding: 0 0 0 90px;
+	float: left;
+}
 
-#footer a
-{ color: #6fa6e7;
-  text-decoration: none;}
+#content ul {
+	margin: 2px 0 22px 0px;
+}
 
-#footer a:hover
-{ color: #FFF;
-  text-decoration: none;}
+#content ul li, .sidebar ul li {
+	list-style-type: none;
+	background: url(bullet.png) no-repeat;
+	margin: 0 0 0 0;
+	padding: 0 0 4px 25px;
+	line-height: 1.5em;
+}
 
-.search
-{ color: #5D5D5D; 
-  border: 1px solid #BBB; 
-  width: 134px; 
-  padding: 4px; 
-  font: 100% arial, sans-serif;}
+#footer {
+	width: 100%;
+	font-family: 'trebuchet ms', sans-serif;
+	font-size: 100%;
+	height: 80px;
+	padding: 28px 0 5px 0;
+	text-align: center;
+	background: transparent url(pattern.png) repeat;
+	border-top: 2px solid #6fa6e7;
+	color: #FFF;
+}
 
-.form_settings
-{ margin: 15px 0 0 0;}
+#footer p {
+	line-height: 1.7em;
+	padding: 0 0 10px 0;
+}
 
-.form_settings p
-{ padding: 0 0 4px 0;}
+#footer a {
+	color: #6fa6e7;
+	text-decoration: none;
+}
 
-.form_settings span
-{ float: left; 
-  width: 200px; 
-  text-align: left;}
-  
-.form_settings input, .form_settings textarea
-{ padding: 5px; 
-  width: 299px; 
-  font: 100% arial; 
-  border: 1px solid #E5E5DB; 
-  background: #FFF; 
-  color: #47433F;}
-  
-.form_settings .submit
-{ font: 100% arial; 
-  border: 0; 
-  width: 99px; 
-  margin: 0 0 0 212px; 
-  height: 33px;
-  padding: 2px 0 3px 0;
-  cursor: pointer; 
-  background: #6fa6e7; 
-  color: #FFF;}
+#footer a:hover {
+	color: #FFF;
+	text-decoration: none;
+}
 
-.form_settings textarea, .form_settings select
-{ font: 100% arial; 
-  width: 299px;}
+.search {
+	color: #5D5D5D;
+	border: 1px solid #BBB;
+	width: 134px;
+	padding: 4px;
+	font: 100% arial, sans-serif;
+}
 
-.form_settings select
-{ width: 310px;}
+.form_settings {
+	margin: 15px 0 0 0;
+}
 
-.form_settings .checkbox
-{ margin: 4px 0; 
-  padding: 0; 
-  width: 14px;
-  border: 0;
-  background: none;}
+.form_settings p {
+	padding: 0 0 4px 0;
+}
 
-.separator
-{ width: 100%;
-  height: 0;
-  border-top: 1px solid #D9D5CF;
-  border-bottom: 1px solid #FFF;
-  margin: 0 0 20px 0;}
-  
-table
-{ margin: 10px 0 30px 0;}
+.form_settings span {
+	float: left;
+	width: 200px;
+	text-align: left;
+}
 
-table tr th, table tr td
-{ background: #6fa6e7;
-  color: #FFF;
-  padding: 7px 4px;
-  text-align: left;}
-  
-table tr td
-{ background: #E5E5DB;
-  color: #47433F;
-  border-top: 1px solid #FFF;}
-  
-#imagem1
-{ background: url(style/Clean2.png) 
-  width: 870px;
-  height: 180px;
-  margin-bottom: 20px;
-  border: 5px solid #6fa6e7;}
+.form_settings input, .form_settings textarea {
+	padding: 5px;
+	width: 299px;
+	font: 100% arial;
+	border: 1px solid #E5E5DB;
+	background: #FFF;
+	color: #47433F;
+}
 
+.form_settings .submit {
+	font: 100% arial;
+	border: 0;
+	width: 99px;
+	margin: 0 0 0 212px;
+	height: 33px;
+	padding: 2px 0 3px 0;
+	cursor: pointer;
+	background: #6fa6e7;
+	color: #FFF;
+}
+
+.form_settings textarea, .form_settings select {
+	font: 100% arial;
+	width: 299px;
+}
+
+.form_settings select {
+	width: 310px;
+}
+
+.form_settings .checkbox {
+	margin: 4px 0;
+	padding: 0;
+	width: 14px;
+	border: 0;
+	background: none;
+}
+
+.separator {
+	width: 100%;
+	height: 0;
+	border-top: 1px solid #D9D5CF;
+	border-bottom: 1px solid #FFF;
+	margin: 0 0 20px 0;
+}
+
+table {
+	margin: 10px 0 30px 0;
+}
+
+table tr th, table tr td {
+	background: #6fa6e7;
+	color: #FFF;
+	padding: 7px 4px;
+	text-align: left;
+}
+
+table tr td {
+	background: #E5E5DB;
+	color: #47433F;
+	border-top: 1px solid #FFF;
+}
+
+#imagem1 {
+	background: url(style/Clean2.png) width: 870px;
+	height: 180px;
+	margin-bottom: 20px;
+	border: 5px solid #6fa6e7;
+}
+
+table {
+	font-family: arial, sans-serif;
+	border-collapse: collapse;
+	width: 100%;
+}
+
+td, th {
+	border: 1px solid #dddddd;
+	text-align: left;
+	padding: 8px;
+}
+
+tr:nth-child(even) {
+	background-color: #dddddd;
+}
